--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ mail.smtp.socketFactory.port=465
 # social
 spring.profiles.include=oauth
 
+# context path
+server.servlet.context-path=/ticketing
+
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
